add db management scripts

--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:seed": "tsx --env-file=.env ./scripts/seed",
+    "db:push": "drizzle-kit push",
+    "db:pull": "drizzle-kit pull",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:check": "drizzle-kit check",
+    "db:up": "drizzle-kit up",
+    "db:studio": "drizzle-kit studio --port 8080 --verbose"
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
