--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "prettier.configPath": "./.prettierrc"
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
